[package]
name = "scripty_v2"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release-full]
inherits = "release"
incremental = false
codegen-units = 1
lto = "fat"

[profile.release]
debug = true

[workspace]
members = [
	"scripty_config",
	"scripty_webserver",
	"scripty_core",
	"scripty_premium",
	"scripty_stt",
	"scripty_audio_handler",
	"scripty_commands",
	"scripty_i18n",
	"scripty_db",
	"scripty_metrics",
	"scripty_utils",
	"scripty_data_storage",
	"scripty_redis",
	"scripty_bot",
	"scripty_bot_utils",
	"scripty_automod",
	"scripty_botlists",
	"scripty_error",
	"scripty_tts",
	"scripty_integrations",
]

[dependencies]
scripty_core = { path = "scripty_core" }
tracing = { version = "0.1", features = ["release_max_level_info"] }

[patch.crates-io]
serenity = { git = "https://github.com/tazz4843/serenity", branch = "next" }
songbird = { git = "https://github.com/tazz4843/songbird", branch = "serenity-next" }
small-fixed-array = { git = "https://github.com/gnomeddev/small-fixed-array", rev = "a7e4d9f97ccdb58c8d63c6749502b6b581b4cc1d" }

[patch."https://github.com/serenity-rs/serenity"]
serenity = { git = "https://github.com/tazz4843/serenity", branch = "next" }
