[package]
name = "scripty_v2"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release-full]
inherits = "release"
incremental = false
codegen-units = 1
lto = "fat"

[profile.release]
debug = true

[workspace]
members = [
    "scripty_config",
    "scripty_webserver",
    "scripty_core",
    "scripty_premium",
    "scripty_stt",
    "scripty_audio_handler",
    "scripty_commands",
    "scripty_i18n",
    "scripty_db",
    "scripty_metrics",
    "scripty_utils",
    "scripty_data_storage",
    "scripty_redis",
    "scripty_bot",
    "scripty_bot_utils",
    "scripty_automod",
    "scripty_botlists",
    "scripty_error",
    "scripty_tts",
    "scripty_integrations",
    "scripty_build_checks",
    "scripty_data_type",
]

[dependencies]
scripty_core = { path = "scripty_core" }
scripty_build_checks = { path = "scripty_build_checks" }

[patch.crates-io]
serenity = { git = "https://github.com/serenity-rs/serenity", branch = "next" }
songbird = { git = "https://github.com/serenity-rs/songbird", branch = "serenity-next" }

[patch.crates-io.serenity-voice-model]
git = "https://github.com/serenity-rs/serenity"
branch = "current"
