[package]
name = "scripty_audio"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flume = "0.10"
dashmap = "5"
tracing = "0.1"
byteorder = "1"
once_cell = "1"
dasp_signal = "0.11"
scripty_config = { path = "../scripty_config" }
tokio = { version = "1", features = ["sync"] }
dasp_interpolate = { version = "0.11", features = ["linear"] }
