[package]
name = "scripty_audio"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ogg = "0.9"
flume = "0.10"
dashmap = "5"
audiopus = "0.2"
byteorder = "1"
once_cell = "1"
dasp_signal = "0.11"
tokio = { version = "1", features = ["sync"] }
scripty_config = { path = "../scripty_config" }
scripty_metrics = { path = "../scripty_metrics" }
dasp_interpolate = { version = "0.11", features = ["linear"] }
tracing = { version = "0.1", features = ["release_max_level_debug"] }
