[package]
name = "scripty_audio_handler"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8"
dashmap = "5"
tracing = "0.1"
async-trait = "0.1"
parking_lot = "0.12"
scripty_db = { path = "../scripty_db" }
scripty_audio = { path = "../scripty_audio" }
scripty_utils = { path = "../scripty_utils" }
scripty_automod = { path = "../scripty_automod" }
scripty_metrics = { path = "../scripty_metrics" }
scripty_premium = { path = "../scripty_premium" }
tokio = { version = "1", features = ["parking_lot"] }
scripty_data_storage = { path = "../scripty_data_storage" }
songbird = { git = "https://github.com/serenity-rs/songbird", branch = "next", features = [
	"receive",
	"rustls",
] }
serenity = { git = "https://github.com/serenity-rs/serenity", branch = "next", features = [
	"voice",
	"dashmap",
	"parking_lot",
	"rustls_backend",
	"model",
	"gateway",
	"client",
	"cache",
	"builder",
	"collector",
	"utils",
] }
sqlx = { version = "0.6", features = ["postgres", "macros", "migrate", "offline", "runtime-tokio-rustls"] }
