[package]
name = "scripty_audio_handler"
version = "1.0.0"
edition = "2021"
license = "EUPL-1.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8"
dashmap = "5"
tracing = "0.1"
backtrace = "0.3"
async-trait = "0.1"
parking_lot = "0.12"
scripty_db = { path = "../scripty_db" }
scripty_stt = { path = "../scripty_stt" }
#scripty_tts = { path = "../scripty_tts" }
scripty_utils = { path = "../scripty_utils" }
scripty_redis = { path = "../scripty_redis" }
scripty_automod = { path = "../scripty_automod" }
scripty_metrics = { path = "../scripty_metrics" }
scripty_premium = { path = "../scripty_premium" }
scripty_integrations = { path = "../scripty_integrations" }
tokio = { version = "1", features = ["parking_lot"] }
scripty_data_storage = { path = "../scripty_data_storage" }
songbird = { git = "https://github.com/tazz4843/songbird", branch = "serenity-next", features = [
	"receive",
	"rustls",
] }
serenity = { git = "https://github.com/serenity-rs/serenity", branch = "next", features = [
	"voice",
	"dashmap",
	"parking_lot",
	"rustls_backend",
	"model",
	"gateway",
	"client",
	"cache",
	"builder",
	"collector",
	"utils",
] }
sqlx = { version = "0.7", features = ["postgres", "macros", "migrate", "runtime-tokio-rustls"] }
