[package]
name = "scripty_audio_handler"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
sqlx.workspace = true
ahash.workspace = true
tokio.workspace = true
dashmap.workspace = true
tracing.workspace = true
secrecy.workspace = true
songbird.workspace = true
serenity.workspace = true
backtrace.workspace = true
async-trait.workspace = true

scripty_db = { path = "../scripty_db" }
scripty_stt = { path = "../scripty_stt" }
#scripty_tts = { path = "../scripty_tts" }
scripty_utils = { path = "../scripty_utils" }
scripty_redis = { path = "../scripty_redis" }
scripty_automod = { path = "../scripty_automod" }
scripty_metrics = { path = "../scripty_metrics" }
scripty_premium = { path = "../scripty_premium" }
scripty_data_type = { path = "../scripty_data_type" }
scripty_integrations = { path = "../scripty_integrations" }
scripty_data_storage = { path = "../scripty_data_storage" }
