[package]
name = "scripty_automod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stfu = "0.1"
tracing = "0.1"
scripty_db = { path = "../scripty_db" }
scripty_premium = { path = "../scripty_premium" }
sqlx = { version = "0.6", features = ["postgres", "macros", "migrate", "offline", "runtime-tokio-rustls", "time"] }
poise = { git = "https://github.com/serenity-rs/poise", branch = "serenity-next", features = ["cache", "collector"] }
