[package]
name = "scripty_automod"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
stfu.workspace = true
sqlx.workspace = true
poise.workspace = true
tracing.workspace = true

scripty_db = { path = "../scripty_db" }
scripty_premium = { path = "../scripty_premium" }
