[package]
name = "scripty_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
scripty_config = { path = "../scripty_config" }
scripty_commands = { path = "../scripty_commands" }
scripty_bot_utils = { path = "../scripty_bot_utils" }
scripty_audio_handler = { path = "../scripty_audio_handler" }
tokio = { version = "1", features = ["parking_lot", "signal"] }
serenity = { git = "https://github.com/serenity-rs/serenity", branch = "next", features = [
	"voice",
	"dashmap",
	"parking_lot",
	"rustls_backend",
	"model",
	"gateway",
	"client",
	"cache",
	"builder",
	"collector",
	"utils",
] }
sqlx = { version = "0.6", features = ["postgres", "macros", "migrate", "offline", "runtime-tokio-rustls", "time"] }
poise = { git = "https://github.com/serenity-rs/poise", branch = "serenity-next", features = ["cache", "collector"] }
