[package]
name = "scripty_bot"
version = "0.1.0"
edition = "2021"
license = "EUPL-1.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
scripty_config = { path = "../scripty_config" }
scripty_commands = { path = "../scripty_commands" }
scripty_botlists = { path = "../scripty_botlists" }
scripty_bot_utils = { path = "../scripty_bot_utils" }
scripty_audio_handler = { path = "../scripty_audio_handler" }
tokio = { version = "1", features = ["parking_lot", "signal"] }
serenity = { git = "https://github.com/serenity-rs/serenity", branch = "next", features = [
	"voice",
	"dashmap",
	"rustls_backend",
	"model",
	"gateway",
	"cache",
	"builder",
	"collector",
	"utils",
	"typesize",
	"transport_compression_zstd"
] }
sqlx = { version = "0.7", features = ["postgres", "macros", "migrate", "runtime-tokio-rustls", "time"] }
poise = { git = "https://github.com/serenity-rs/poise", branch = "serenity-next", features = ["cache", "collector"] }
