[package]
name = "scripty_bot"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
sqlx.workspace = true
tokio.workspace = true
poise.workspace = true
tracing.workspace = true
serenity.workspace = true

scripty_error = { path = "../scripty_error" }
scripty_config = { path = "../scripty_config" }
scripty_commands = { path = "../scripty_commands" }
scripty_botlists = { path = "../scripty_botlists" }
scripty_bot_utils = { path = "../scripty_bot_utils" }
scripty_audio_handler = { path = "../scripty_audio_handler" }
