[package]
name = "scripty_bot_utils"
version = "0.1.0"
edition = "2021"
license = "EUPL-1.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1", features = ["rand"] }
time = "0.3"
dashmap = "6"
tracing = "0.1"
once_cell = "1"
humantime = "2"
backtrace = "0.3"
serde_json = "1"
num-format = "0.4"
async-trait = "0.1"
parking_lot = "0.12"
async-tempfile = { version = "0.5", features = ["uuid"] }
scripty_db = { path = "../scripty_db" }
scripty_stt = { path = "../scripty_stt" }
scripty_i18n = { path = "../scripty_i18n" }
scripty_utils = { path = "../scripty_utils" }
scripty_redis = { path = "../scripty_redis" }
scripty_config = { path = "../scripty_config" }
scripty_metrics = { path = "../scripty_metrics" }
scripty_premium = { path = "../scripty_premium" }
scripty_botlists = { path = "../scripty_botlists" }
scripty_data_type = { path = "../scripty_data_type" }
scripty_data_storage = { path = "../scripty_data_storage" }
scripty_integrations = { path = "../scripty_integrations" }
scripty_audio_handler = { path = "../scripty_audio_handler" }
tokio = { version = "1", features = ["parking_lot", "signal"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serenity = { git = "https://github.com/serenity-rs/serenity", branch = "next", features = [
	"voice",
	"dashmap",
	"rustls_backend",
	"model",
	"gateway",
	"cache",
	"builder",
	"collector",
	"utils",
	"typesize",
	"transport_compression_zstd"
] }
sqlx = { version = "0.7", features = ["postgres", "macros", "migrate", "runtime-tokio-rustls", "time"] }
poise = { git = "https://github.com/serenity-rs/poise", branch = "serenity-next", features = ["cache", "collector"] }
