[package]
name = "scripty_bot_utils"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
uuid.workspace = true
http.workspace = true
time.workspace = true
sqlx.workspace = true
tokio.workspace = true
poise.workspace = true
base64.workspace = true
dashmap.workspace = true
tracing.workspace = true
reqwest.workspace = true
serenity.workspace = true
once_cell.workspace = true
humantime.workspace = true
backtrace.workspace = true
serde_json.workspace = true
num-format.workspace = true
async-trait.workspace = true
parking_lot.workspace = true
futures-util.workspace = true
async-tempfile.workspace = true
small-fixed-array.workspace = true

scripty_db = { path = "../scripty_db" }
scripty_stt = { path = "../scripty_stt" }
scripty_i18n = { path = "../scripty_i18n" }
scripty_utils = { path = "../scripty_utils" }
scripty_redis = { path = "../scripty_redis" }
scripty_config = { path = "../scripty_config" }
scripty_metrics = { path = "../scripty_metrics" }
scripty_premium = { path = "../scripty_premium" }
scripty_botlists = { path = "../scripty_botlists" }
scripty_data_type = { path = "../scripty_data_type" }
scripty_data_storage = { path = "../scripty_data_storage" }
scripty_integrations = { path = "../scripty_integrations" }
scripty_audio_handler = { path = "../scripty_audio_handler" }
