[package]
name = "scripty_botlists"
version = "0.1.0"
edition = "2021"
license = "EUPL-1.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls"] }
tracing = "0.1"
serde-aux = "4"
serde_json = "1"
async-trait = "0.1"
serde_derive = "1"
scripty_config = { path = "../scripty_config" }
