[package]
name = "scripty_botlists"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
reqwest.workspace = true
tracing.workspace = true
serde-aux.workspace = true
serde_json.workspace = true
async-trait.workspace = true
serde_derive.workspace = true

scripty_config = { path = "../scripty_config" }
