[package]
name = "scripty_commands"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4"
tracing = "0.1"
indexmap = "1"
humantime = "2"
scripty_db = { path = "../scripty_db" }
scripty_i18n = { path = "../scripty_i18n" }
scripty_utils = { path = "../scripty_utils" }
scripty_config = { path = "../scripty_config" }
scripty_automod = { path = "../scripty_automod" }
scripty_premium = { path = "../scripty_premium" }
scripty_bot_utils = { path = "../scripty_bot_utils" }
scripty_data_storage = { path = "../scripty_data_storage" }
scripty_audio_handler = { path = "../scripty_audio_handler" }
tokio = { version = "1", features = ["parking_lot", "signal"] }
serenity = { git = "https://github.com/serenity-rs/serenity", branch = "next", features = [
	"voice",
	"dashmap",
	"parking_lot",
	"rustls_backend",
	"model",
	"gateway",
	"client",
	"cache",
	"builder",
	"collector",
	"utils",
] }
sqlx = { version = "0.6", features = ["postgres", "macros", "migrate", "offline", "runtime-tokio-rustls", "time"] }
poise = { git = "https://github.com/serenity-rs/poise", branch = "serenity-next", features = ["cache", "collector"] }
