[package]
name = "scripty_commands"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
hex.workspace = true
rand.workspace = true
sqlx.workspace = true
tokio.workspace = true
poise.workspace = true
tracing.workspace = true
indexmap.workspace = true
serenity.workspace = true
humantime.workspace = true
typesize.workspace = true
num-format.workspace = true

scripty_db = { path = "../scripty_db" }
scripty_i18n = { path = "../scripty_i18n" }
scripty_utils = { path = "../scripty_utils" }
scripty_redis = { path = "../scripty_redis" }
scripty_config = { path = "../scripty_config" }
scripty_automod = { path = "../scripty_automod" }
scripty_premium = { path = "../scripty_premium" }
scripty_bot_utils = { path = "../scripty_bot_utils" }
scripty_data_storage = { path = "../scripty_data_storage" }
scripty_integrations = { path = "../scripty_integrations" }
scripty_audio_handler = { path = "../scripty_audio_handler" }
