[package]
name = "scripty_core"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_cpus = "1"
scripty_db = { path = "../scripty_db" }
scripty_bot = { path = "../scripty_bot" }
scripty_i18n = { path = "../scripty_i18n" }
scripty_audio = { path = "../scripty_audio" }
scripty_redis = { path = "../scripty_redis" }
scripty_config = { path = "../scripty_config" }
scripty_metrics = { path = "../scripty_metrics" }
scripty_webserver = { path = "../scripty_webserver" }
tokio = { version = "1", features = ["parking_lot"] }
scripty_data_storage = { path = "../scripty_data_storage" }
tracing = { version = "0.1", features = ["release_max_level_info"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "tracing-log"] }
tracing-loki = { version = "0.2", default-features = false, features = ["rustls", "compat-0-2-1"] }
