[package]
name = "scripty_core"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2"
rlimit = "0.10"
num_cpus = "1"
humantime = "2"
scripty_db = { path = "../scripty_db" }
scripty_bot = { path = "../scripty_bot" }
scripty_i18n = { path = "../scripty_i18n" }
scripty_audio = { path = "../scripty_audio" }
scripty_redis = { path = "../scripty_redis" }
scripty_config = { path = "../scripty_config" }
tracing = { version = "0.1", features = ["log"] }
scripty_metrics = { path = "../scripty_metrics" }
fern = { version = "0.6", features = ["colored"] }
scripty_webserver = { path = "../scripty_webserver" }
tokio = { version = "1", features = ["parking_lot"] }
scripty_data_storage = { path = "../scripty_data_storage" }
fenrir-rs = { git = "https://github.com/tazz4843/fenrir-rs", branch = "json-logs", features = ["reqwest-async"] }
