[package]
name = "scripty_core"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[[bin]]
name = "scripty_v2"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
url.workspace = true
fern.workspace = true
tokio.workspace = true
rlimit.workspace = true
tracing.workspace = true
num_cpus.workspace = true
humantime.workspace = true
fenrir-rs.workspace = true

scripty_db = { path = "../scripty_db" }
scripty_bot = { path = "../scripty_bot" }
scripty_stt = { path = "../scripty_stt" }
scripty_i18n = { path = "../scripty_i18n" }
scripty_redis = { path = "../scripty_redis" }
scripty_config = { path = "../scripty_config" }
scripty_metrics = { path = "../scripty_metrics" }
scripty_webserver = { path = "../scripty_webserver" }
scripty_build_checks = { path = "../scripty_build_checks" }
scripty_data_storage = { path = "../scripty_data_storage" }
