[package]
name = "scripty_data_storage"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1"
hex = "0.4"
rand = "0.8"
hound = "3"
dashmap = "5"
once_cell = "1"
ouroboros = "0.17"
parking_lot = "0.12"
scripty_db = { path = "../scripty_db" }
scripty_utils = { path = "../scripty_utils" }
scripty_redis = { path = "../scripty_redis" }
scripty_config = { path = "../scripty_config" }
aes-gcm = { version = "0.10", features = ["std"] }
tokio = { version = "1", features = ["parking_lot", "signal"] }
tracing = { version = "0.1", features = ["release_max_level_debug"] }
serenity = { git = "https://github.com/mkrasnitski/serenity", branch = "gateway-revert", features = [
	"voice",
	"dashmap",
	"parking_lot",
	"rustls_backend",
	"model",
	"gateway",
	"client",
	"cache",
	"builder",
	"collector",
	"utils",
] }
sqlx = { version = "0.6", features = ["postgres", "macros", "migrate", "offline", "runtime-tokio-rustls"] }
poise = { git = "https://github.com/serenity-rs/poise", branch = "serenity-next", features = ["cache", "collector"] }
