[package]
name = "scripty_data_storage"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
csv.workspace = true
hex.workspace = true
rand.workspace = true
sqlx.workspace = true
tokio.workspace = true
hound.workspace = true
poise.workspace = true
dashmap.workspace = true
aes-gcm.workspace = true
tracing.workspace = true
serenity.workspace = true
once_cell.workspace = true
ouroboros.workspace = true

scripty_db = { path = "../scripty_db" }
scripty_utils = { path = "../scripty_utils" }
scripty_redis = { path = "../scripty_redis" }
scripty_config = { path = "../scripty_config" }