[package]
name = "scripty_error"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
sqlx.workspace = true
uuid.workspace = true
redis.workspace = true
tokio.workspace = true
magnum.workspace = true
reqwest.workspace = true
serenity.workspace = true
songbird.workspace = true
backtrace.workspace = true
rmp-serde.workspace = true
serde_json.workspace = true
async-tempfile.workspace = true
deadpool-redis.workspace = true

scripty_integrations = { path = "../scripty_integrations" }
