[package]
name = "scripty_i18n"
version = "1.0.0"
edition = "2024"
license = "EUPL-1.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fluent = "0.16"
dashmap = "6"
tracing = "0.1"
once_cell = "1"
serde_json = "1"
unic-langid = "0.9"
intl-memoizer = "0.5"
scripty_db = { path = "../scripty_db" }
scripty_utils = { path = "../scripty_utils" }
scripty_config = { path = "../scripty_config" }
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.7", features = ["postgres", "macros", "migrate", "runtime-tokio-rustls"] }
