[package]
name = "scripty_i18n"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
sqlx.workspace = true
serde.workspace = true
fluent.workspace = true
dashmap.workspace = true
tracing.workspace = true
once_cell.workspace = true
serde_json.workspace = true
unic-langid.workspace = true
intl-memoizer.workspace = true

scripty_db = { path = "../scripty_db" }
scripty_utils = { path = "../scripty_utils" }
scripty_config = { path = "../scripty_config" }
