[package]
name = "scripty_integrations"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
reqwest.workspace = true
bitflags.workspace = true
serde_json.workspace = true

scripty_config = { path = "../scripty_config" }
