[package]
name = "scripty_metrics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
tracing = "0.1"
once_cell = "1"
systemstat = "0.1"
prometheus-static-metric = "0.5"
tokio-metrics = { version = "0.1", features = ["rt"] }
prometheus = { version = "0.13", features = ["process"] }
tokio = { version = "1.16", features = ["parking_lot", "signal"] }
