[package]
name = "scripty_metrics"
version = "1.0.0"
edition = "2021"
license = "EUPL-1.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
dashmap = "5"
tracing = "0.1"
once_cell = "1"
systemstat = "0.2"
prometheus-static-metric = "0.5"
tokio-metrics = { version = "0.3", features = ["rt"] }
prometheus = { version = "0.13", features = ["process"] }
tokio = { version = "1", features = ["parking_lot", "signal"] }
