[package]
name = "scripty_metrics"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
tokio.workspace = true
chrono.workspace = true
dashmap.workspace = true
tracing.workspace = true
once_cell.workspace = true
systemstat.workspace = true
prometheus.workspace = true
tokio-metrics.workspace = true
prometheus-static-metric.workspace = true
