[package]
name = "scripty_premium"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = "0.3"
dashmap = "5"
bitflags = "2"
once_cell = "1"
scripty_db = { path = "../scripty_db" }
tracing = { version = "0.1", features = ["release_max_level_info"] }
sqlx = { version = "0.6", features = ["postgres", "macros", "migrate", "offline", "runtime-tokio-rustls"] }
