[package]
name = "scripty_premium"
version = "1.0.0"
edition = "2021"
license = "EUPL-1.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = "0.3"
dashmap = "6"
tracing = "0.1"
bitflags = "2"
once_cell = "1"
scripty_db = { path = "../scripty_db" }
scripty_utils = { path = "../scripty_utils" }
sqlx = { version = "0.7", features = ["postgres", "macros", "migrate", "runtime-tokio-rustls"] }
