[package]
name = "scripty_premium"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
time.workspace = true
sqlx.workspace = true
dashmap.workspace = true
tracing.workspace = true
bitflags.workspace = true
once_cell.workspace = true

scripty_db = { path = "../scripty_db" }
scripty_utils = { path = "../scripty_utils" }
