[package]
name = "scripty_redis"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = "0.23"
tracing = "0.1"
deadpool = "0.9"
once_cell = "1"
scripty_config = { path = "../scripty_config" }
deadpool-redis = "0.12"
