[package]
name = "scripty_redis"
version = "1.0.0"
edition = "2024"
license = "EUPL-1.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
deadpool = "0.11"
once_cell = "1"
deadpool-redis = "0.15"
redis = { version = "0.25", features = ["tokio-rustls"] }
scripty_config = { path = "../scripty_config" }
