[package]
name = "scripty_redis"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
redis.workspace = true
tracing.workspace = true
deadpool.workspace = true
once_cell.workspace = true
deadpool-redis.workspace = true

scripty_config = { path = "../scripty_config" }
