[package]
name = "scripty_stt"
version = "1.0.0"
edition = "2021"
license = "EUPL-1.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flume = "0.11"
magnum = "1"
dashmap = "5"
futures = "0.3"
tracing = "0.1"
byteorder = "1"
rmp-serde = "1"
once_cell = "1"
serde_json = "1"
dasp_signal = "0.11"
parking_lot = "0.12"
uuid = { version = "1", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["sync"] }
scripty_config = { path = "../scripty_config" }
scripty_metrics = { path = "../scripty_metrics" }
dasp_interpolate = { version = "0.11", features = ["linear"] }
scripty-common = { git = "https://github.com/scripty-bot/scripty-common" }
