[package]
name = "scripty_stt"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
uuid.workspace = true
flume.workspace = true
serde.workspace = true
tokio.workspace = true
magnum.workspace = true
dashmap.workspace = true
futures.workspace = true
tracing.workspace = true
byteorder.workspace = true
rmp-serde.workspace = true
once_cell.workspace = true
serde_json.workspace = true
dasp_signal.workspace = true
dasp_interpolate.workspace = true

scripty-common.workspace = true
scripty_config = { path = "../scripty_config" }
scripty_metrics = { path = "../scripty_metrics" }
