[package]
name = "scripty_tts"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["process"], default-features = false }
bitflags = "2"
serde_derive = "1"
